test/spec_vectors/return_call/fail/module_13.wat
(module (func $large-func (return_call 1012321300)))